# BolaNaRedeDjango

./: .env_exemplo  .gitignore  TESTE  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt
bolanarede/: admin.py  apps.py  models.py  serializers.py  views.py
bolanarede/migrations/: 0001_initial.py  0002_camisa_perfil_time_delete_camisas_camisa_time.py  0002_delete_teste.py  0003_rename_perfil_usuario.py  0004_rename_titulo_camisa_descricao_remove_camisa_isbn_and_more.py  0005_camisa_wow.py  0006_remove_camisa_wow_camisa_camisa.py  0007_rename_camisa_camisa_capa.py  0008_remove_usuario_nome_remove_usuario_site_and_more.py
config/: settings.py  urls.py
media/images/: 32215aa0-20f3-4d54-beec-ddc2ffaf2e23
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py
usuario/migrations/: 0001_initial.py  0002_remove_usuario_cpf_usuario_time.py
